# Pet-project-currency

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/etl/: dag_load_rates_md_raw.py
dags/etl/dds/: dag_load_rates_dds.py
dags/etl/ods/: dag_load_rates_ods.py
dags/utils/: utils_dict.py  utils_koronapay_api.py  utils_load_to_postgres.py  utils_str.py  utils_transform.py
handles/dwh/: create_schemas.py  create_tables.py
handles/oltp/: execute_custom_query.py  get_postgres_credentials.py
