[project]
name = "pet-project-currency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.4",
    "apache-airflow-providers-postgres==6.0.0",
    "duckdb==1.4.3",
    "psycopg2-binary>=2.9.11",
    "pycountry==24.6.1",
    "python-dotenv==1.2.1",
    "requests>=2.32.5",
    "sqlalchemy==1.4.54",
    "urllib3==2.6.2",
]
